--- a/donar.html
+++ b/donar.html
@@ -8,6 +8,9 @@
         <link rel="preconnect" href="https:/fonts.googleapis.com">
         <link rel="preconnect" href="https:/fonts.gstatic.com" crossorigin>
         <link href="https:/fonts.googleapis.com/asssets/css2?family=Roboto:ital,wght@0,100;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https:/use.fontawesome.com/releases/v5.2.0/asssets/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="css/animista.css">      <link rel="stylesheet" href="https:/use.fontawesome.com/releases/v5.2.0/asssets/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 
         <link rel="stylesheet" href="css/style.css">      <link rel="stylesheet" href="https:/use.fontawesome.com/releases/v5.2.0/asssets/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
