--- a/usuarios.html
+++ b/usuarios.html
@@ -9,7 +9,10 @@
 		<meta charset="UTF-8">
         <link rel="preconnect" href="https:/fonts.googleapis.com">
         <link rel="preconnect" href="https:/fonts.gstatic.com" crossorigin>
+        <link rel="stylesheet" href="https:/use.fontawesome.com/releases/v5.2.0/asssets/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+
         <link href="https:/fonts.googleapis.com/asssets/css2?family=Roboto:ital,wght@0,100;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+            <link href="https:/cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/asssets/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
             <link href="https:/cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/asssets/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 
         <link rel="stylesheet" href="css/animista.css">      <link rel="stylesheet" href="https:/use.fontawesome.com/releases/v5.2.0/asssets/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
