--- a/cuidar/adoptar_registroPETs.html
+++ b/cuidar/adoptar_registroPETs.html
@@ -34,35 +34,39 @@
             <img src="./../../img/perris/perro1.gif" alt="perro gif" ></h1>
           </header>
 <main>
-<section class="container__cardDetails">
+<article class="container__cardDetails" id="details">
  <img src="./../../img/perris/perro1.gif" alt="gif perrito!" class="img__cardDetails"/>
- <table class="table">
-  <thead>
-  <tr>
-      <td class="text-center htable">Nombre:</td>
-      <td id="nombrePet"></td>
-  </tr>
-  </thead>
 
-  <tbody>
-  <tr>
-      <td class="postreImg">PETreferencia:</td>
-      <td class="text-center" id="petRef"></td>
-  </tr>
-  <tr>
-
-      <td>
           <ul>
-              <li>Fecha de Resgate: </li>
-              <li>Edad:</li>
-              <li>Peso:</li>
-              <li>Genero - Especie - Raza: </li>
-          </ul>
-      </td>
-  </tr>
-  </tbody>
-</table>
-</section>
+            <li><strong>NOMBRE PET: </strong>
+            <ul>
+              <li><em>Flaki</em></li>
+            </ul>
+          </li>
+          <li><strong>FECHA RESGATE: </strong>
+            <ul>
+              <li><em>03/10/2021</em></li>
+            </ul>
+          </li>
+
+          <li><strong>Edad Aproximada: </strong>
+            <ul>
+              <li><em>3 años</em></li>
+            </ul>
+          </li>
+          <li><strong>Raza: </strong>
+            <ul>
+              <li><em>Calletero y Ovillejero Aleman</em></li>
+            </ul>
+          </li>
+        </ul>
+    <div>
+                <a href="#" class="card__botao">FORMULARIO Adopcion</a> 
+                <a href="#" class="card__botao">REQUISITOS para adoptar</a>
+   </div>  
+
+ 
+</article>
 </main>
 
 <footer>
@@ -80,7 +84,6 @@
     <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
   </li>
   </ul>
-  
   </footer>
   </body>
   
