--- a/cuidar/cuidar_amando.html
+++ b/cuidar/cuidar_amando.html
@@ -45,7 +45,7 @@
 /* general containers*/
 .container{
   display: flex;
-width:70%;
+width:90%;
 margin: 16px;
 align-self: center;
 justify-content: space-around;
@@ -55,7 +55,7 @@ padding: 2rem;
 
 
 nav{
-  display: inline-flex;
+  display: flex;
   width: 100%;
   justify-content: space-evenly;
   font-size: 1.4rem;
